5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3812/executions/1594_2043.log
== SUBMITION (2019-03-23 16:16:32) 
-- CODE:
n1 = float(input('digite n1: '))
n2 = float(input('digite n2: '))
n3 = float(input('digite n3: '))
n4 = float(input('digite n4: '))

nota = (n1+2*n2+3*n3+4*n4)/10

print(round(nota,2))
-- EXECUTION TIME:
0.198616
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:18:18) 
-- CODE:
n1 = float(input('digite n1: '))
n2 = float(input('digite n2: '))
n3 = float(input('digite n3: '))
n4 = float(input('digite n4: '))

nota = (n1+2*n2+3*n3+4*n4)/10

print(round(nota,2)
-- ERROR:
File "XXXX", line 9
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:18:22) 
-- CODE:
n1 = float(input('digite n1: '))
n2 = float(input('digite n2: '))
n3 = float(input('digite n3: '))
n4 = float(input('digite n4: '))

nota = (n1+2*n2+3*n3+4*n4)/10

print(round(nota,2))
-- EXECUTION TIME:
0.17028
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
